--- a/src/components/ProfileHeader/ProfileHeader.css
+++ b/src/components/ProfileHeader/ProfileHeader.css
@@ -2,6 +2,10 @@
     display: flex;
 }
 
+.main-profile {
+    padding-top: 45px;
+}
+
 .edit-button {
     border-color: #00bc77;
     background-color: #00bc77;
